--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   carousel_slider: ^1.3.0
   transparent_image: ^1.0.0
   lipsum: ^1.0.1
+  badges: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - profile.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
