--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   transparent_image: ^1.0.0
   lipsum: ^1.0.1
   badges: ^1.1.0
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
