--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   lipsum: ^1.0.1
   badges: ^1.1.0
   http: ^0.12.0+2
+  flutter_icons: ^0.1.4
 
 dev_dependencies:
   flutter_test:
