--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.0+2
   flutter_icons: ^0.1.4
   smooth_star_rating: 1.0.3
+  provider: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
